mejora de la animacion service

--- a/index.html
+++ b/index.html
@@ -94,19 +94,19 @@
 		<div class="service">
 			
 
-			<div class="service__card wow animate__animated animate__bounceInLeft animate__slower animate__delay-2s animate__faster">
+			<div class="service__card wow animate__animated animate__bounceInLeft  ">
 				<h3 class="service__title"><i class="fas fa-pizza-slice"></i> Pizzeria</h3>
 				<p>Lorem ipsum, dolor, sit amet consectetur adipisicing elit. Sequi ea possimus alias veritatis nobis repellat, corporis nulla quas voluptatum consequatur eos animi soluta, error cum cupiditate quisquam? Incidunt, aperiam, mollitia!</p>
 				<img class="img-small" src="img/terraza.jpg" alt="terraza">
 			</div>
 
-			<div class="service__card wow animate__animated animate__bounceInLeft animate__slower animate__delay-3s animate__faster">
+			<div class="service__card wow animate__animated animate__bounceInLeft  animate__slow">
 				<h3 class="service__title"><i class="fas fa-taxi"></i> Estacionamiento</h3>
 				<p>Lorem ipsum, dolor, sit amet consectetur adipisicing elit. Sequi ea possimus alias veritatis nobis repellat, corporis nulla quas voluptatum consequatur eos animi soluta, error cum cupiditate quisquam? Incidunt, aperiam, mollitia!</p>
 				<img class="img-small" src="img/estacionamiento.jpg" alt="estacionamiento">
 			</div>
 
-			<div class="service__card wow animate__animated animate__bounceInLeft animate__slower animate__delay-4s animate__faster">
+			<div class="service__card wow animate__animated animate__bounceInLeft  animate__slower">
 				<h3 class="service__title"><i class="fas fa-utensils"></i> Restaurante</h3>
 				<p>Lorem ipsum, dolor, sit amet consectetur adipisicing elit. Sequi ea possimus alias veritatis nobis repellat, corporis nulla quas voluptatum consequatur eos animi soluta, error cum cupiditate quisquam? Incidunt, aperiam, mollitia!</p>
 				<img class="img-small" src="img/restaurante.jpg" alt="restaurante">
