--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		<span class="cum" id="contacto"></span>
 		<h3 class="subtitle">Contacto</h3>
 		<div class="section bg-fff">
-			<a class="center" href="#">
+			<a class="center" href="https://www.instagram.com/tierrabellapregonero/">
 				<i class="fab fa-instagram fa-3x"></i>
 				<p class="center-p">Instagram</p>
 			</a>
@@ -125,11 +125,11 @@
 				<i class="fas fa-envelope fa-3x"></i>
 				<p class="center-p">Gmail</p>
 			</a>
-			<a class="center" href="#">
+			<a class="center" href="wa.me/+584160788490">
 				<i class="fab fa-whatsapp fa-3x"></i>
 				<p class="center-p">Whatsapp</p>
 			</a>
-			<a class="center" href="#">
+			<a class="center" href="t.me/juanmekanico">
 				<i class="fab fa-telegram fa-3x"></i>
 				<p class="center-p">Telegram</p>
 			</a>
