contactos full exepto mail

--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
 				<i class="fas fa-envelope fa-3x"></i>
 				<p class="center-p">Gmail</p>
 			</a>
-			<a class="center" href="wa.me/+584160788490">
+			<a class="center" href="https://wa.me/+584160788490">
 				<i class="fab fa-whatsapp fa-3x"></i>
 				<p class="center-p">Whatsapp</p>
 			</a>
-			<a class="center" href="t.me/juanmekanico">
+			<a class="center" href="https://t.me/juanmekanico">
 				<i class="fab fa-telegram fa-3x"></i>
 				<p class="center-p">Telegram</p>
 			</a>
