--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Hotel Tierra Bella</title>
 	<!-- style -->
 	<link rel="stylesheet" href="css/style.css">
-	<!-- roboto -->
+	<!-- roboto --> 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
 	<!-- fontawesome -->
@@ -39,19 +39,19 @@
 			</div>
 		</div>
 	</header>
-
+<!-- <i class="fas fa-concierge-bell grande-icon wow animate__animated animate__bounceInLeft animate__slow"></i> -->
 	<div class="container ">
-		<div class="section line">
-			<i class="fas fa-concierge-bell grande-icon wow animate__animated animate__bounceInLeft animate__slow"></i>
-			<div class="section__cont animate__animated wow animate__bounceInLeft animate__slow">
-				<h2 class="section__title">Sobre nosotros</h2>
-				<p class="section__text">Somos un excelente hotel para su hospedaje, donde encontrarás un servicio de calidad, armonía y exclusividad, con una atención impecable desde su llegada a nuestras instalaciones, para así cumplir las expectativas de nuestros huéspedes haciendo de su estadía una experiencia inolvidable. Ven y disfruta de manera placentera al mejor estilo del Gran Hotel San Cristóbal Suite</p>
+		<div class="about">
+			<div class="icon">
+				<i class="fas fa-concierge-bell icon-icon"></i>
+				<p class="icon-title">Sobre nosotros</p>
 			</div>
+			<p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Officiis dolorem neque impedit obcaecati necessitatibus facilis nihil sunt, non ad similique reiciendis explicabo odio rem! Corrupti numquam nihil libero sint, voluptatibus earum ab? Et, ea provident labore veritatis, blanditiis adipisci accusantium eum amet, dignissimos vitae expedita porro rerum sit quis hic recusandae! Laborum neque ad tempora corrupti beatae sit omnis aperiam?</p>
 		</div>
 		
 		<span class="cum" id="habitaciones"></span>
 		<h2 class="subtitle"><i class="fas fa-bed"></i> Habitaciones</h2>
-		<div class="section bg-fff">
+		<div class="section bg-fff container-card">
 			
 
 			<div class="card">
@@ -74,9 +74,7 @@
 				<h3 class="card__title">Triple</h3>
 				<p class="card__text">Si estas interesado en una habitación triple en Alcoy, las de nuestro hostal cuentan con una cama de matrimonio y una cama de 90 cm o con tres camas de 90 cm. Perfectas para una familia o para 3 amigos que vengan a nuestro salón de eventos en Alcoy por una boda o un evento. Equipado para atender todas las necesidades en tu estadía: Baño privado completo, Pantalla LCD con TV por cable, closet, kit de plancha, caja de seguridad y amenidades orgánicas.</p>
 			</div>
-		</div>
 
-		<div class="section bg-fff cortar line">
 			<div class="card">
 				<img class="img-habi" src="img/suite1.jpg" alt="suite">
 				<h3 class="card__title">Suite</h3>
@@ -117,7 +115,7 @@
 		</div>
 		<span class="cum" id="contacto"></span>
 		<h3 class="subtitle">Contacto</h3>
-		<div class="section bg-fff">
+		<div class="section bg-fff flex">
 			<a class="center" href="https://www.instagram.com/tierrabellapregonero/">
 				<i class="fab fa-instagram fa-3x"></i>
 				<p class="center-p">Instagram</p>
