--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 <!-- <i class="fas fa-concierge-bell grande-icon wow animate__animated animate__bounceInLeft animate__slow"></i> -->
 	<div class="container ">
 		<div class="about">
-			<div class="icon">
+			<div class="icon wow animate__animated animate__bounceInLeft animate__slow">
 				<i class="fas fa-concierge-bell icon-icon"></i>
 				<p class="icon-title">Sobre nosotros</p>
 			</div>
-			<p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Officiis dolorem neque impedit obcaecati necessitatibus facilis nihil sunt, non ad similique reiciendis explicabo odio rem! Corrupti numquam nihil libero sint, voluptatibus earum ab? Et, ea provident labore veritatis, blanditiis adipisci accusantium eum amet, dignissimos vitae expedita porro rerum sit quis hic recusandae! Laborum neque ad tempora corrupti beatae sit omnis aperiam?</p>
+			<p class="about-text wow animate__animated animate__bounceInLeft animate__slow">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Officiis dolorem neque impedit obcaecati necessitatibus facilis nihil sunt, non ad similique reiciendis explicabo odio rem! Corrupti numquam nihil libero sint, voluptatibus earum ab? Et, ea provident labore veritatis, blanditiis adipisci accusantium eum amet, dignissimos vitae expedita porro rerum sit quis hic recusandae! Laborum neque ad tempora corrupti beatae sit omnis aperiam?</p>
 		</div>
 		
 		<span class="cum" id="habitaciones"></span>
