--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			<div class="service__card wow animate__animated animate__bounceInLeft  animate__slower">
 				<h3 class="service__title"><i class="fas fa-utensils"></i> Restaurante</h3>
 				<p>Lorem ipsum, dolor, sit amet consectetur adipisicing elit. Sequi ea possimus alias veritatis nobis repellat, corporis nulla quas voluptatum consequatur eos animi soluta, error cum cupiditate quisquam? Incidunt, aperiam, mollitia!</p>
-				<img class="img-small" src="img/restaurante.jpg" alt="restaurante">
+				<img class="img-small" src="img/restaurante.webp" alt="restaurante">
 			</div>
 
 
